# xsequence

./: .gitignore  README.md  check.py  conversion_functions.py  dirtree.py  elements.py  fff.py  lattice.py  pyproject.toml  setup.py  test_conversions.py  tree.txt
checks/: check.py  check_pyat.py
conversion_utils/: conv_utils.py  cpymad_conv.py  cpymad_conv_new.py  pyat_conv.py  xline_conv.py  xsuite_conv.py
examples/: Example.ipynb  Example.py  elegant_example.py  elegant_example_fccee.py  example.py  example_presentation.py  log.madx  mad_example.py  pyat_example.py  pyat_example_deps.ipynb  pyat_example_deps.py  xsequence_example.ipynb  xsequence_example.py  xsequence_example.slides.html  xsequence_presentation.ipynb  xsequence_presentation.slides.html
fsf/: .elements.py.swp  __init__.py  base_elements.py  element_conversion_functions.py  elements.py  elements_dataclasses.py  elements_functions.py  lattice.py  lattice_baseclasses.py  lattice_conversion_functions.py  lattice_conversions.py  lattice_new.py
fsf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lattice/: conversion_functions.py  element_conversion_functions.py  elements.py  fff.py  lattice.py  lattice_conversion_functions.py
personal_devs/: example.py  mad_example.py
sequences/: collimators.seq
tests/: .test_conversions.py.swp  log.madx  multicode_conversion_optics.py  temp_test_elements.py  test_conversions.py  test_element_cpymad.py  test_optics.py
toolkit/: pyat_functions.py
xsequence/: __init__.py  elements.py  elements_dataclasses.py  lattice.py  lattice_baseclasses.py  node.py  (+1 more)
(+101 files in other folders)
