[project]
name = "xsequence"
version = "0.1.0"
description = "Package to describe accelerator lattices in python"
authors = [
    {name = "Felix Carlier", email = "fcarlier@cern.ch"},
    ]
license = "MIT"
requires-python = ">=3.8"


dependencies = [
"numpy >= 1.19.0", 
"pandas >= 1.0",
"xtrack @ git+https://github.com/xsuite/xtrack.git@main",
"xdeps @ git+https://github.com/xsuite/xdeps.git@main",
"cpymad >= 1.8.1", 
"lark >= 1.1.2", 
"rich >= 12.4.4", 
"accelerator-toolbox >= 0.2.2", 
"scipy >= 1.5.0", 
"pytest >= 7.1.2", 
]


[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
